<resources>
    <string name="app_name">Editable Profile</string>
    <string name="dummy_display_name">Brahyam Meneses</string>
    <string name="profile_picture_description">User profile picture</string>
    <string name="edit">Edit</string>
    <string name="dummy_user_age">27 years old</string>
    <string name="dummy_location">From Caracas, VE</string>
    <string name="dummy_religion">Christian</string>
    <string name="dummy_ethnicity">Latino</string>
    <string name="dummy_gender">Male</string>
    <string name="dummy_height">174 cm tall</string>
    <string name="dummy_figure">Normal</string>
    <string name="about_me">About me</string>
    <string name="dummy_about_me">Fusce id sagittis mauris, id convallis sem. Suspendisse id rutrum libero. Duis quis purus dictum, rutrum diam vitae, blandit ante. In vitae nisl sodales, mattis dolor a, laoreet libero. Ut ornare commodo sem, et vestibulum nibh bibendum vestibulum. Mauris faucibus urna lacus. Curabitur consectetur nunc sed massa cursus, aliquam interdum ex egestas. Duis vitae euismod est.</string>
    <string name="tall">tall</string>
    <string name="years_old">years old</string>
    <string name="error_loading_profile">We\'re sorry. There was an error loading the profile</string>
    <string name="from">From</string>
    <string name="dummy_marital_status">Widower</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="real_name_label">Real Name *</string>
    <string name="display_name_label">Display Name *</string>
    <string name="gender_label">Gender *</string>
    <string name="height">Height</string>
    <string name="dummy_edit_height">174 cm</string>
    <string name="birthday_label">Birthday *</string>
    <string name="dummy_birthday">30.12.1990</string>
    <string name="location_label">Location *</string>
    <string name="dummy_edit_location">Caracas</string>
    <string name="marital_status_label">Marital Status *</string>
    <string name="religion">Religion</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="figure">Figure</string>
    <string name="occupation">Occupation</string>
    <string name="dummy_occupation">Engineer</string>
    <string name="mandatory_fields">All fields with * are mandatory</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="autocomplete_list_selection_error">Please select a city from the suggestion list</string>
    <string name="select_city">Select your location</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dummy_char_count">0/0</string>
    <string name="mandatory_field_error">This field is mandatory and cannot be empty</string>
</resources>
