<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtEditProfileInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/mandatory_fields"
            android:textColor="@color/colorEditProfileValueText"
            android:padding="@dimen/element_default_half_margin" />

        <TextView
            android:id="@+id/txtEditProfileRealNameLabel"
            style="@style/EditProfileLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/real_name_label"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileInfo" />

        <Button
            android:id="@+id/txtEditProfileRealName"
            style="@style/EditProfileValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_display_name"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileRealNameLabel" />

        <TextView
            android:id="@+id/txtEditProfileDisplayNameLabel"
            style="@style/EditProfileLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_name_label"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileRealName" />

        <Button
            android:id="@+id/txtEditProfileDisplayName"
            style="@style/EditProfileValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_display_name"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileDisplayNameLabel" />

        <TextView
            android:id="@+id/txtEditProfileGenderLabel"
            style="@style/EditProfileLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_label"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileDisplayName" />

        <Button
            android:id="@+id/txtEditProfileGender"
            style="@style/EditProfileValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_gender"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileGenderLabel" />

        <TextView
            android:id="@+id/txtEditProfileHeightLabel"
            style="@style/EditProfileLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileGender" />

        <Button
            android:id="@+id/txtEditProfileHeight"
            style="@style/EditProfileValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_edit_height"
            android:drawableEnd="@null"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileHeightLabel" />

        <TextView
            android:id="@+id/txtEditProfileBirthdayLabel"
            style="@style/EditProfileLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthday_label"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileHeight" />

        <Button
            android:id="@+id/txtEditProfileBirthday"
            style="@style/EditProfileValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_birthday"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileBirthdayLabel" />

        <TextView
            android:id="@+id/txtEditProfileLocationLabel"
            style="@style/EditProfileLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_label"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileBirthday" />

        <Button
            android:id="@+id/txtEditProfileLocation"
            style="@style/EditProfileValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_edit_location"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileLocationLabel" />

        <TextView
            android:id="@+id/txtEditProfileMaritalStatusLabel"
            style="@style/EditProfileLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marital_status_label"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileLocation" />

        <Button
            android:id="@+id/txtEditProfileMaritalStatus"
            style="@style/EditProfileValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_marital_status"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileMaritalStatusLabel" />

        <TextView
            android:id="@+id/txtEditProfileReligionLabel"
            style="@style/EditProfileLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/religion"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileMaritalStatus" />

        <Button
            android:id="@+id/txtEditProfileReligion"
            style="@style/EditProfileValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_religion"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileReligionLabel" />

        <TextView
            android:id="@+id/txtEditProfileEthnicityLabel"
            style="@style/EditProfileLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ethnicity"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileReligion" />

        <Button
            android:id="@+id/txtEditProfileEthnicity"
            style="@style/EditProfileValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_ethnicity"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileEthnicityLabel" />

        <TextView
            android:id="@+id/txtEditProfileFigureLabel"
            style="@style/EditProfileLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/figure"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileEthnicity" />

        <Button
            android:id="@+id/txtEditProfileFigure"
            style="@style/EditProfileValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_figure"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileFigureLabel" />

        <TextView
            android:id="@+id/txtEditProfileOccupationLabel"
            style="@style/EditProfileLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/occupation"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileFigure" />

        <Button
            android:id="@+id/txtEditProfileOccupation"
            style="@style/EditProfileValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_occupation"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileOccupationLabel" />

        <TextView
            android:id="@+id/txtEditProfileAboutMeLabel"
            style="@style/EditProfileLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_me"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileOccupation" />

        <Button
            android:id="@+id/txtEditProfileAboutMe"
            style="@style/EditProfileValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_about_me"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfileAboutMeLabel" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>